# LLM-playground

./: README.md  main.py  pyproject.toml  runner.py  transformer_decoder.ipynb
.github/workflows/: ci.yml
dataloader/: dataloader.py  transformer_dataloader.py
models/blocks/: decoder_block.py
models/embedding/: positional_embedding.py  token_embedding.py
models/layers/: RMSNorm.py  feed_forward.py  multi_head_attention.py
models/model/: config.py  model.py  transformer_decoder.py
models/tokenizer/: tokenizer.py  vanilla_tokenizer.py
